--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ author: Andrew Pyle
 organization: Harding University
 email: apyle@harding.edu
 description: Class Materials for Harding University Introductory Programming in C++
-theme: minima
+remote_theme: jekyll/minima
 minima:
   skin: dark
+baseurl: "/harding/comp-1510"
+url: "https://slides.andrewpyle.dev"
