--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,7 @@ description: Class Materials for Harding University Introductory Programming in 
 remote_theme: jekyll/minima
 minima:
   skin: dark
+plugins:
+  - jekyll-readme-index
+  - jekyll-titles-from-headings
+  - jekyll-relative-links
