--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,7 @@ plugins:
   - jekyll-readme-index
   - jekyll-titles-from-headings
   - jekyll-relative-links
+titles_from_headings:
+  enabled: true
+  strip_title: true
+  collections: true
