Add jekyll-mermaid plugin

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ plugins:
   - jekyll-readme-index
   - jekyll-titles-from-headings
   - jekyll-relative-links
+  - jekyll-mermaid
 titles_from_headings:
   enabled: true
   strip_title: true
