--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Andrew Pyle
 organization: Harding University
 email: apyle@harding.edu
 description: Class Materials for Harding University Introductory Programming in C++
-baseurl: HU-COMP-1510
+baseurl: /HU-COMP-1510
 remote_theme: jekyll/minima
 minima:
   skin: dark
