--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ organization: Harding University
 email: apyle@harding.edu
 description: Class Materials for Harding University Introductory Programming in C++
 baseurl: /HU-COMP-1510
+url: https://andrew-pyle.github.io
 remote_theme: jekyll/minima
 minima:
   skin: dark
