--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: Andrew Pyle
 organization: Harding University
 email: apyle@harding.edu
 description: Class Materials for Harding University Introductory Programming in C++
-baseurl: /HU-COMP-1510
+baseurl: /HU-COMP-1510/
 url: https://andrew-pyle.github.io
 remote_theme: jekyll/minima
 minima:
@@ -17,6 +17,7 @@ header_pages:
 collections:
   notes:
     output: true
+    permalink: /:collection/:name
     order:
       - streams.md
       - files.md
