--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: HU COMP 1510
+title: COMP 1510
 author: Andrew Pyle
 organization: Harding University
 email: apyle@harding.edu
-description: Class Materials for Harding University Introductory Programming in C++
+description: Class Materials for Introductory Programming in C++ at Harding University
 baseurl: /HU-COMP-1510/
 url: https://andrew-pyle.github.io
 remote_theme: jekyll/minima
