Fix if in template. Make wording more consistent

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Class Notes
 author:
   name: Andrew Pyle
   email: apyle@harding.edu
-description: Course Materials
+description: Prof. Andrew Pyle's Course Materials
 baseurl: /HU-COMP-1510/
 url: https://andrew-pyle.github.io
 remote_theme: jekyll/minima
